// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-escaped.js [acorn] format 1`] = `
"Unexpected token (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^
Cause: Unexpected token (2:7)"
`;

exports[`default-escaped.js [espree] format 1`] = `
"Unexpected token n\\u{63} (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^
Cause: Unexpected token n\\u{63}"
`;

exports[`default-escaped.js [flow] format 1`] = `
"Unexpected identifier, expected a declaration, statement or export specifiers (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^^^^^^^"
`;

exports[`default-escaped.js [meriyah] format 1`] = `
"Unexpected token: 'identifier' (2:12)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |            ^
Cause: [2:12]: Unexpected token: 'identifier'"
`;

exports[`default-escaped.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// export asyn\\u{63} from "async";
export n\\u{63} from "async";
=====================================output=====================================
// export asyn\\u{63} from "async";
export nc from "async";

================================================================================
`;
